2to3 & update python-retro submodule branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "deps/python-retro"]
-	path = deps/python-retro
-	url = https://github.com/lifning/python-retro.git
+    path = deps/python-retro
+    branch = sync-or-sim
+    url = https://github.com/lifning/python-retro.git
